# PythonInterviews

./: .gitignore  README.md  pyproject.toml
src/pynterviews/: greet.py  mutants.py
tests/: test_greet.py  test_mutants.py  test_pynterviews.py
