[tool.poetry]
name = "pynterviews"
version = "0.1.0"
description = ""
authors = ["Julio Faerman <jfaerman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10.2"
arrow = "^1.2.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
greet = "pynterviews.greet:cli"
mutants = "pynterviews.mutants:cli"
